LPS-64796 - Remove font size on header links to fix vertical alignment with header title

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_header.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/taglib/_header.scss
@@ -3,7 +3,6 @@
 	color: #555;
 
 	.header-back-to a {
-		font-size: 1.5em;
 		font-weight: bold;
 		text-decoration: none;
 	}
